--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,11 +3,20 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.6.2.min.js")" type="text/javascript"></script>
+    <link href="@Url.Content("~/Content/css/my_layout.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/css/site.css")" rel="stylesheet" type="text/css" />
+<!--[if lte IE 7]>
+    <link href="css/patches/patch_my_layout.css" rel="stylesheet" type="text/css" />
+<![endif]-->
+    <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
 </head>
 
 <body>
-    @RenderBody()
+  <div class="page_margins">
+    <div class="page">
+        @RenderPage("~/Views/Shared/_header.cshtml")
+        @RenderBody()
+    </div>
+  </div>
 </body>
 </html>
